--- a/CongressAddress/src/css/App.css
+++ b/CongressAddress/src/css/App.css
@@ -14,8 +14,13 @@
     border: 1px solid black;
     background-color: blue;
     color: white;
-
 }
+
+#addressEditRender{
+    background-color: blue;
+    border: 1px solid black;
+}
+
 
 #SmallNumbers{
     border: 1px solid red;
@@ -23,7 +28,9 @@
     color: white;
 }
 
-
+input{
+    width: 600px;
+}
 
 
 li{
