--- a/CongressAddress/src/css/App.css
+++ b/CongressAddress/src/css/App.css
@@ -57,3 +57,9 @@ li{
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+button{
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
+}
