CongressServer no favicon working, Load, view, and empty buttons work

--- a/CongressServer/views/index.pug
+++ b/CongressServer/views/index.pug
@@ -6,6 +6,7 @@ block content
 
   button#insertValidData Insert Valid Data
     button#getAll Get All
-    button#emptyCollection Empty Collection
+    button#EmptyCollection Empty Collection
+    button#Update Update
 
   pre#display
