--- a/CongressServer/views/index.pug
+++ b/CongressServer/views/index.pug
@@ -6,7 +6,7 @@ block content
 
   button#insertValidData Insert Valid Data
     button#getAll Get All
-    button#EmptyCollection Empty Collection
-    button#Update Update
+    button#emptyCollection Empty Collection
+    button#update Update
 
   pre#display
